<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AccelDataCollector</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="startAccelerometer">Start Accelerometer</string>
	<string name="stopAccelerometer">Stop Accelerometer</string>
	<string name="choosePlace">Place</string>
    
	<!-- Vehicles -->
	<string name="bus">B</string>
	<string name="ubahn">U</string>
	<string name="sbahn">S</string>
	<string name="tram">T</string>
	<string name="fahrrad">F</string>
	<string name="walk">W</string>
	<string name="enableVehicleOption">Enable Vehicle Option</string>
	<!-- Add Place -->
	<string name="btn_add_category">Add</string>
	<string name="enter_text">Enter Place</string>
	<string name="addPlace">Add Place</string>
	
	<!-- Menu Items -->
	<string name="action_json_conversion">Convert Data to JSON</string>
</resources>
