<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.acc.main.MainActivity$PlaceholderFragment" >

        <Button
            android:id="@+id/startBtn"
            android:layout_width="160sp"
            android:layout_height="160sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dip"
            android:background="@drawable/round_button_start"
            android:padding="5dip"
            android:text="@string/startAccelerometer"
            android:textColor="#fff" />

        <Button
            android:id="@+id/stopBtn"
            android:layout_width="135sp"
            android:layout_height="135sp"
            android:layout_below="@id/startBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:background="@drawable/round_button_stop"
            android:padding="5dip"
            android:text="@string/stopAccelerometer"
            android:textColor="#fff" />

        <Button
            android:id="@+id/placeBtn"
            android:layout_width="90sp"
            android:layout_height="90sp"
            android:layout_below="@id/stopBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dip"
            android:background="@drawable/round_button_place"
            android:padding="5dip"
            android:text="@string/choosePlace"
            android:textColor="#fff" />
    </RelativeLayout>

</ScrollView>